# agent-from-scratch

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: exposition.py  graph.py  intent.py  llm.py  nodes.py  pipeline.py  prompts.py  response.py  run.py  state.py  streaming.py  tool_args.py  tool_trace.py
config/: settings.py
data/: annex_snapshots.py  cosing_api.py  legal_status.py  product_types.py
data/annex_snapshots/default/: annex_II.csv  annex_III.csv  annex_IV.csv  annex_V.csv  annex_VI.csv  manifest.json
docs/: SCORING.md
guardrails/: __init__.py  jurisdiction.py  post_output.py  pre_input.py  pre_tool.py  topic_scope.py  types.py
observability/: __init__.py  langfuse_integration.py  turn_log.py  turn_trace.py
scoring/: __init__.py  compare.py  score_tool_call.py  trace.py  trustworthiness.py  types.py
scoring/oracle/: __init__.py  concentration.py  csv_reader.py  labelling.py  lookup.py
scripts/: sync_annex_snapshots.py
tests/: test_annex_snapshots.py  test_exposition.py  test_guardrails.py  test_intent.py  test_jurisdiction.py  test_langfuse_integration.py  test_pipeline_blocked.py  test_response.py  test_scoring.py  test_scoring_concentration.py  test_scoring_labelling.py  test_scoring_trace.py  test_streaming.py  test_tool_args.py  test_tool_trace.py  test_topic_scope.py  test_trustworthiness.py
tools/: __init__.py  check_concentration.py  labelling_rules.py  lookup_ingredient.py  messages.py
ui/: blocked_view.py  chat_app.py  chat_theme.py  intent_view.py  reasoning_view.py
