[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "eu-cosmetics-agent"
version = "0.1.0"
description = "EU cosmetics ingredient compliance agent — live CosIng API + LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.33.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langfuse>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"agent/run.py" = ["E402"]
"ui/chat_app.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["agent", "config", "data", "guardrails", "observability", "scoring", "tools", "ui"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.hatch.build.targets.wheel]
packages = ["agent", "config", "data", "guardrails", "observability", "scoring", "tools", "ui"]

[tool.hatch.build.targets.sdist]
include = ["agent", "config", "data", "guardrails", "observability", "scoring", "tools", "ui"]
